force-app/main/default/objects/Bulk_Permits_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Conga_Template__c</fullName>
        <label>Conga Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_BCC__c</fullName>
        <label>Email BCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_From__c</fullName>
        <label>Email From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permitted_Worker_Category__c</fullName>
        <label>Permitted Worker Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_Content__c</fullName>
        <label>Subject Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bulk Permits Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Permit_Type__c</columns>
        <columns>Permitted_Worker_Category__c</columns>
        <columns>Conga_Template__c</columns>
        <columns>Email_Template__c</columns>
        <columns>Email_From__c</columns>
        <columns>Subject_Content__c</columns>
        <columns>Email_BCC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Bulk Permits Settings</pluralLabel>
</CustomObject>